<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">브루브루</string>
    <string name="title_section1">Order List</string>
    <string name="title_section2">Haru</string>
    <string name="title_section3">Atti</string>
    <string name="title_section4">1022</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="price_warning">지나친 음료는 정신 건강에 해롭습니다.</string>
    <string name="store_haru">HARU</string>
    <string name="store_1022">1022</string>
    <string name="store_2flat">2FLAT</string>
    <string name="store_tws">TWS</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="new_version">새로운 버젼이 있습니다. 스토어로 이동합니다.</string>
    <string name="store_all_list">완료 내역</string>
    <string name="orderlist">주문 내역</string>
    <string name="time.sale">Time Sale</string>
    <string name="gps_fail">위치를 켜면 보다 정확한 시간에 음료를 받을 수 있습니다.</string>
    <string name="order_succ">정상적으로 주문되었습니다. 주문하신 음료가 준비되면 알람이 전달됩니다.</string>
    <string name="reorder_succ">정상적으로 재주문되었습니다. 주문하신 음료가 준비되면 알람이 전달됩니다.</string>
    <string name="order_succ_cancel">정상적으로 주문취소되었습니다.</string>
    <string name="order_fail">주문 오류</string>
    <string name="network_fail">네트워크 오류</string>
    <string name="order_id">주문번호</string>
    <string name="order_sum_price">총 주문 금액</string>
    <string name="reorder">재주문</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="order_select">메뉴를 먼저 선택해주세요.</string>
    <string name="order_check_list">이미 주문된 내역이 있습니다.\n주문 내역에서 확인하세요.</string>
    <string name="push_msg_on">지금부터 주문 알림을 받습니다.</string>
    <string name="push_msg_off">주문 알림을 받지 않습니다.</string>
    <string name="nickname">닉네임</string>
    <string name="check_nickname">닉네임을 확인해 주세요.</string>
    <string name="check_user">등록되지 않는 사용자입니다. 확인 부탁드립니다.</string>
    <string name="status_ready">주문 전달 중</string>
    <string name="status_cooking">브루잉 중</string>
    <string name="status_store_cooking">브루잉</string>
    <string name="status_takeout">Take out</string>
    <string name="status_store_allfinish">브루잉+\nTake out</string>
    <string name="orderlist_recent">최근 주문 내역</string>
    <string name="order_cancel_info">※ \"주문 전달 중\" 상태에서만 주문취소가 가능합니다.</string>
    <string name="order_cancel">주문취소</string>
    <string name="order_recall">주문 다시 전달</string>

    <string name="order_confirm">주문넣기</string>
    <string name="setting_info">브루브루 사용법</string>
    <string name="setting_event">의견 및 이벤트</string>
    <string name="logout">로그아웃</string>
    <string name="login">닉네임 설정하기</string>
    <string name="setting_push_status">주문 알림 받기</string>
    <string name="setting_mv_browser">웹페이지로 이동합니다.</string>
    <string name="setting_logout_action">로그아웃 하시겠습니까?</string>
    <string name="setting_logout_detail">로그아웃시 주문된 음료에 대한 알람을 받으실 수 없습니다.</string>
    <string name="finish">\'뒤로\' 버튼을 한번 더 누르시면 종료됩니다.</string>
    <string name="max_item">주문 가능한 음료는 최대 10잔입니다.</string>

    <string name="time.sale.menu">1. 메뉴 1개를 선택하세요.</string>
    <string name="time.sale.price">2. 가격을 설정하세요.</string>
    <string name="time.sale.count">3. 판매 개수를 설정하세요.</string>
    <string name="time.sale.time">4. 판매 시간을 설정하세요.</string>
    <string name="time.sale.confirm">설정 완료</string>
    <string name="time.sale.count.error">판매 개수를 설정바랍니다.</string>
    <string name="time.sale.price.error">가격이 변경되지 않았습니다. 가격을 변경 바랍니다.</string>
    <string name="time.sale.succ">Time Sale 설정이 적용되었습니다.</string>

    <string name="time.sale.count.check">판매 가능 개수를 확인해주세요.</string>

    <string name="order.store">커피숍</string>
    <string name="orderlist.user.empty">조회 내역이 없습니다.\n메뉴를 클릭하고 주문해 보세요.</string>
    <string name="order.menu.confirm_content">[주문넣기] 버튼을 클릭하면 커피숍으로 주문이 들어갑니다.\n\n설정하신 시간에 맞춰 커피숍으로 가셔서 음료를 Take out하시기 바랍니다. 결제는 커피숍에서 진행됩니다.\n\n주문하고 안가면 미워할꺼예요!</string>

    <string name="info.brew">※ 브루잉 : 주문 접수 및 음료를 만든다는 뜻입니다.</string>
    <string name="info.takeout">※ Take out :  \"가져가시옵소서\                   "라는 뜻입니다.</string>

    <string name="order.recall.succ">주문을 다시 전달하였습니다.\n조금만 기다려 주세요!(사장님 빨리빨리! 이러다 손님 떨어질라!)</string>
    <string name="order.recall.fail">주문한지 5분이 지난 후에 사용 할 수 있습니다. 5분 후에 다시 사용 바랍니다.</string>


</resources>
