<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"

    android:layout_height="wrap_content">

    <LinearLayout
        android:background="#F2F2F4"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:background="#ffffff"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_8"></LinearLayout>

        <com.tws.widget.CuzTextView
            android:id="@+id/header_recent_top"

            android:text="@string/orderlist_recent"
            android:layout_marginLeft="@dimen/size_15"

            android:layout_width="match_parent"
            android:layout_height="@dimen/size_30"
            android:gravity="center_vertical|left"
            android:textColor="#F9872B"
            android:textSize="@dimen/size_16"
            android:textStyle="bold" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.tws.widget.CuzTextView

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:gravity="center"
                    android:text="주문번호 : "
                    android:textColor="#3D454C"
                    android:textSize="@dimen/size_16" />


                <com.tws.widget.CuzTextView
                    android:id="@+id/header_recent_row_key"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:gravity="center"
                    android:text=""
                    android:textColor="#3D454C"
                    android:textSize="@dimen/size_16" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.tws.widget.CuzTextView

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:gravity="center"
                    android:text="주문자 : "
                    android:textColor="#3D454C"
                    android:textSize="@dimen/size_16" />


                <com.tws.widget.CuzTextView
                    android:id="@+id/header_recent_row_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:gravity="center"
                    android:text=""
                    android:textColor="#3D454C"
                    android:textSize="@dimen/size_16" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.tws.widget.CuzTextView

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:gravity="center"
                    android:text="주문시간 : "
                    android:textColor="#3D454C"
                    android:textSize="@dimen/size_16" />


                <com.tws.widget.CuzTextView
                    android:id="@+id/header_recent_row_time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:gravity="center"
                    android:text=""
                    android:textColor="#3D454C"
                    android:textSize="@dimen/size_16" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.tws.widget.CuzTextView

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:gravity="center"
                    android:text="도착예정시간 : "
                    android:textColor="#3D454C"
                    android:textSize="@dimen/size_16" />


                <com.tws.widget.CuzTextView
                    android:id="@+id/header_recent_row_arrive_time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:gravity="center"
                    android:text=""
                    android:textColor="#3D454C"
                    android:textSize="@dimen/size_16" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.tws.widget.CuzTextView

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:gravity="center"
                    android:text="거리정보 : "
                    android:textColor="#3D454C"
                    android:textSize="@dimen/size_16" />


                <com.tws.widget.CuzTextView
                    android:id="@+id/header_recent_row_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:gravity="center"
                    android:text=""
                    android:textColor="#3D454C"
                    android:textSize="@dimen/size_16" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.tws.widget.CuzTextView

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:gravity="center"
                    android:text="@string/order_sum_price"
                    android:textColor="#3D454C"
                    android:textSize="@dimen/size_16" />


                <com.tws.widget.CuzTextView
                    android:id="@+id/header_recent_row_price"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:gravity="center"
                    android:text=""
                    android:textColor="#3D454C"
                    android:textSize="@dimen/size_16" />

            </LinearLayout>

            <com.tws.widget.CuzTextView
                android:id="@+id/header_recent_row_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size_10"
                android:layout_marginTop="@dimen/size_10"
                android:gravity="left|center_vertical"
                android:text="아메리카노, 까페라떼, 빙수"
                android:textColor="#3D454C"
                android:textSize="@dimen/size_16" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/header_recent_bottom"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView

                android:layout_width="@dimen/size_35"
                android:layout_height="@dimen/size_35"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/size_15"
                android:layout_marginRight="@dimen/size_10"
                android:background="@drawable/icon_owner_receipt" />

            <LinearLayout
                android:id="@+id/header_recent_row_status_ing"
                android:background="@drawable/icon_btn_bg_n"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <com.tws.widget.CuzTextView
                    android:text="@string/status_store_cooking"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/size_14"
                    android:layout_gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/header_recent_row_status_finish"
                android:background="@drawable/icon_btn_bg_n"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <com.tws.widget.CuzTextView
                    android:text="@string/status_takeout"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/size_14"
                    android:layout_gravity="center" />
            </LinearLayout>

            <com.tws.widget.CuzButton
                android:id="@+id/header_recent_row_status_allfinish"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@xml/xml_icon_btn_bg"
                android:text="@string/status_store_allfinish"
                android:textColor="#349BCD"
                android:textSize="@dimen/size_14"
                />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>
